<resources>
    <string name="app_name">Staff Solution</string>
    <string name="clear_pad">Clear</string>
    <string name="save_signature">Save</string>
    <string name="login_bottom_title">Staff Management Version 1.0</string>
    <string name="start_sign_above">Start sign above</string>
    <string name="welcome_label">Hi,Ramu</string>
    <string name="img_qrcode_desc">this image is useful for displaying qr code of user</string>
    <string name="click_here">Click Here</string>
    <string name="fire_evacuation">Fire Evacuation</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="rationale_camera">You must grant permission to access camera and external storage to run this application</string>
    <string name="staff_report">Staff Report</string>
    <string name="remotely">Remote</string>
    <string name="working_remotely">Working Remotely</string>
    <string name="office">Office</string>
    <string name="bottom_text">Staff Management Version 1.0</string>
    <string name="in">In</string>
    <string name="out">Out</string>
    <string name="something_went_wrong">Something went wrong please try again later</string>
    <string name="login_failed">Login failed, please contact your system administrator</string>
    <string name="password_changed_successfully">Password changed successfully</string>
    <string name="no_internet_connection">Internet not available, Cross check your internet connectivity and try again"</string>
    <string name="no_staff_records_found">No Staff Records Found</string>
    <string name="signed_in_thanks_msg">Thank you for signing in</string>
    <string name="signed_out_thanks_msg">Thank you for signing out</string>
    <string name="staff">Staff</string>
    <string name="fire_evacuation_success">Fire Evacuation list has been saved in admin</string>
    <string name="thank_you">Thank You.</string>
    <string name="no_staff_members_found">There are currently no staff members signed in</string>
    <string name="qr_code_not_valid_for_sign_in_out">Invalid QR Code For Sign in and Sign out,  Please Try Another One</string>
    <string name="please_click_option_below">Please click option below</string>
    <string name="all">All</string>
    <string name="visitor">Visitor</string>
    <string name="department">Department</string>
    <string name="weak">Weak</string>
    <string name="medium">Medium</string>
    <string name="strong">Strong</string>
    <string name="very_strong">Very Strong</string>
    <string name="invalid_credential">Invalid username or password,please try again</string>
    <string name="user_already_logged_in">User already logged in,please contact your system administrator</string>
    <string name="err_msg_strong_pwd">Passwords should be at least 8 characters long, should contain at least 1 capital letter, 1 lowercase letter, 1 special character and 1 number.</string>
    <string name="error_msg_confirm_password_empty">Please enter confirm password</string>
    <string name="error_msg_confirm_pwd_match">New Password and Old Password Must be same</string>
    <string name="youAreNotUpdatedTitle">Update Available</string>
    <string name="youAreNotUpdatedMessage">A new version of Staff Solution App is available. Please update to version  </string>
    <string name="youAreNotUpdatedMessage1">   now</string>
    <string name="update">Update</string>
    <string name="str_currently_signed_in">Currently signed in</string>
    <string name="str_no_of_pepole_signed_in">No of People on site</string>

</resources>
