<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteColor"
    android:orientation="vertical"
    android:weightSum="10">


    <RelativeLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="@dimen/common_margin"
            android:layout_above="@+id/buttons_container">

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_above="@+id/signature_pad_description"
                android:layout_marginBottom="@dimen/common_margin"
                android:background="@android:color/darker_gray" />

            <com.brinfotech.feedbacksystem.customClasses.FontsTextView
                android:id="@+id/signature_pad_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/_16sdp"
                android:text="@string/start_sign_above"
                android:textColor="@android:color/darker_gray" />

            <com.github.gcacace.signaturepad.views.SignaturePad
                android:id="@+id/signature_pad"
                android:layout_width="fill_parent"
                android:background="@color/whiteColor"
                android:layout_height="fill_parent" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/buttons_container"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/_65sdp"
            android:layout_marginBottom="@dimen/common_margin"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/common_margin"
            android:layout_marginRight="@dimen/common_margin"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/clear_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/btn_rounded_red_border"
                android:enabled="false"
                android:textSize="35sp"
                android:textColor="@color/colorBlack"
                android:text="@string/clear_pad" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="0dp"
                android:layout_marginLeft="@dimen/common_margin"
                android:layout_height="match_parent"
                android:background="@drawable/btn_rounded_red_border"
                android:layout_weight="1"
                android:textColor="@color/colorBlack"
                android:textSize="35sp"
                android:enabled="false"
                android:text="@string/save_signature" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>